# IA-Infra

./: .gitignore  README.md  demo.html
.github/workflows/: ci.yml
backend/: Dockerfile  sonar-project.properties
backend/app/: main.py
backend/tests/: test_api.py
deploy/cloud/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  motor-deployment.yaml  motor-service.yaml  namespace.yaml
deploy/local/: docker-compose.yml
deploy/local/k8s/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  motor-deployment.yaml  motor-service.yaml
docs/: 01-arquitectura.md  02-motor.md  03-paralelizacion.md  04-despliegue-local.md  05-despliegue-nube.md  06-cicd.md  07-analisis-comparativo.md  08-conclusiones.md  README.md
frontend/: Dockerfile  index.html  nginx.conf
motor/: CMakeLists.txt  Dockerfile
motor/bench/: bench.cpp  suite.txt
motor/src/: engine.h  kalah.h  server.cpp
motor/tests/: test_kalah.cpp
